--- a/Done/Info.plist
+++ b/Done/Info.plist
@@ -5,7 +5,7 @@
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
     <key>NSMicrophoneUsageDescription</key>
-    <string>This app needs camera permission</string>
+    <string>This app needs Microphone permission</string>
     <key>NSCameraUsageDescription</key>
     <string>This app needs camera permission</string>
     <key>NSPhotoLibraryUsageDescription</key>
