--- a/Done/Info.plist
+++ b/Done/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow Done to access your photo library to take pictures and record videos.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow Done to access your photo library to take pictures and record videos.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
